<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/cadastro_produto"
        android:textColor="@color/colorPrimary"
        android:textSize="25dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/textView"
        android:textSize="17dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/produto" />

    <Spinner
            android:id="@+id/spinnerProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog">

        </Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <AutoCompleteTextView
                android:id="@+id/descricao"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:hint="@string/descricao"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorBlack" />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:layout_marginTop="5dp"
        android:text="@string/tipo"/>

    <Spinner
        android:id="@+id/spinnerTipo"
        android:layout_width="match_parent"
        android:layout_height="30dp">
    </Spinner>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <AutoCompleteTextView
            android:id="@+id/preco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/preco"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/colorBlack" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:layout_marginTop="5dp"
        android:text="@string/foto"/>

    <ImageView
        android:id="@+id/foto"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/ic_user"/>

    <Button
        android:id="@+id/cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/border_button"
        android:text="@string/cadastrar" />


</LinearLayout>
</ScrollView>