<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.pdasolucoes.renthusband.ProdutoActivity"
    tools:showIn="@layout/activity_produto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/text_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/produto"
            android:textColor="@color/colorBlack"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/nomeProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mala de Ferramenta"
            android:textColor="@color/colorPrimary"
            android:textSize="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/descricao"
            android:textColor="@color/colorBlack"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/descricaoProduto"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:maxLength="1024"
            android:text="fjkgbfdslgblksgnçkfgnçksngçgnçsgnçengbkçsfnblkdfnbldfnbkldfnbklndfklbndfklbnldfknbkldfnbkdfndklndklnbdfknbdfkldklndlnfdbndfklbndfklbndfklbndfklbndfklbndfklbndklbndklndfklbndfllkndfvbndfbndlbndlnbld"
            android:textColor="@color/colorPrimary" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/preco"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/precoProduto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="R$ 30,00/ por dia"
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimary" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_falar_com"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/falar"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp" />

            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
